--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -13,6 +13,9 @@
             <trans-unit id="validator.class_implements_interface.not_valid">
                 <source>The class "%s" does not implement the interface "%s".</source>
             </trans-unit>
+            <trans-unit id="validator.class_extends_class.not_valid">
+                <source>The class "%s" does not extend the class "%s".</source>
+            </trans-unit>
 
         </body>
     </file>
