--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -19,6 +19,9 @@
             <trans-unit id="validator.icon_exists.not_valid">
                 <source>The icon "%s" is not registered.</source>
             </trans-unit>
+            <trans-unit id="validator.file_exists.not_valid">
+                <source>The file "%s" was not found.</source>
+            </trans-unit>
 
         </body>
     </file>
